[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/spr_nave2_0.png" type="Texture" id=1]
[ext_resource path="res://escenas/player/player.gd" type="Script" id=2]
[ext_resource path="res://sprites/CubeYellow.png" type="Texture" id=3]
[ext_resource path="res://escenas/player/bulletPlayer.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.7668, 13.157 )

[node name="player" type="KinematicBody2D" groups=[
"player",
]]
position = Vector2( 489.234, 371.743 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
bullet = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 5, 0 )

[node name="BulletPosition" type="Position2D" parent="Sprite"]
position = Vector2( 22.23, -0.997 )

[node name="Sprite" type="Sprite" parent="Sprite/BulletPosition"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.0117647, 0.0745098, 0.0313726, 1 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.14

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 2
limit_top = 2
limit_right = 2000
limit_bottom = 1500
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color( 0.227451, 0.556863, 0.835294, 1 )
shape = SubResource( 2 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
